--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
     <style name="ToolbarText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:paddingRight">40dp</item>
         <item name="android:background">@null</item>
         <item name="android:ellipsize">end</item>
         <item name="android:gravity">start|center_vertical</item>
